ref: reformat code